# cc-tracer

./: README.md  install.sh  pyproject.toml
src/cc_tracer/: __init__.py  tracer.py  viewer.py
tests/: test_tracer.py
